# resnet-18

./: .gitignore  CMakeLists.txt
include/resnet/blocks/: basic_block.h
include/resnet/data/: data_loader.h  dataset.h
include/resnet/layers/: batch_norm.h  conv2d.h  linear.h  pooling.h  relu.h
include/resnet/model/: resnet18.h
include/resnet/utils/: activation.h  tensor.h
src/: main.cpp
src/blocks/: basic_block.cpp
src/data/: data_loader.cpp  dataset.cpp
src/layers/: batch_norm.cpp  conv2d.cpp  linear.cpp  pooling.cpp  relu.cpp
src/model/: restnet18.cpp
src/utils/: activation.cpp  tensor.cpp
